--- a/BankApp.csproj
+++ b/BankApp.csproj
@@ -78,6 +78,12 @@
     <Compile Include="Forms\RegistrationForm.designer.cs">
       <DependentUpon>RegistrationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Validations.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Validations.Designer.cs">
+      <DependentUpon>Validations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\AddBankCard.resx">
@@ -94,6 +100,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\RegistrationForm.resx">
       <DependentUpon>RegistrationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Validations.resx">
+      <DependentUpon>Validations.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
