--- a/BankApp.csproj
+++ b/BankApp.csproj
@@ -90,6 +90,12 @@
     <Compile Include="Forms\MainForm.designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MobilePhoneTransferForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MobilePhoneTransferForm.Designer.cs">
+      <DependentUpon>MobilePhoneTransferForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MoneyTransferCardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MobilePhoneTransferForm.resx">
+      <DependentUpon>MobilePhoneTransferForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MoneyTransferCardForm.resx">
       <DependentUpon>MoneyTransferCardForm.cs</DependentUpon>
