--- a/BankApp.csproj
+++ b/BankApp.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Forms\ChangePhoneNumber.designer.cs">
       <DependentUpon>ChangePhoneNumber.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\CommunalPayments.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CommunalPayments.Designer.cs">
+      <DependentUpon>CommunalPayments.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\HistoryTransactions.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +139,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ChangePhoneNumber.resx">
       <DependentUpon>ChangePhoneNumber.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\CommunalPayments.resx">
+      <DependentUpon>CommunalPayments.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\HistoryTransactions.resx">
       <DependentUpon>HistoryTransactions.cs</DependentUpon>
