--- a/BankApp.csproj
+++ b/BankApp.csproj
@@ -84,6 +84,12 @@
     <Compile Include="Forms\HistoryTransactions.designer.cs">
       <DependentUpon>HistoryTransactions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InternetTVPayments.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InternetTVPayments.Designer.cs">
+      <DependentUpon>InternetTVPayments.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\HistoryTransactions.resx">
       <DependentUpon>HistoryTransactions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InternetTVPayments.resx">
+      <DependentUpon>InternetTVPayments.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
