--- a/BankApp.csproj
+++ b/BankApp.csproj
@@ -78,6 +78,12 @@
     <Compile Include="Forms\CommunalPayments.Designer.cs">
       <DependentUpon>CommunalPayments.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\HelpForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\HelpForm.Designer.cs">
+      <DependentUpon>HelpForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\HistoryTransactions.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +154,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\CommunalPayments.resx">
       <DependentUpon>CommunalPayments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\HelpForm.resx">
+      <DependentUpon>HelpForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\HistoryTransactions.resx">
       <DependentUpon>HistoryTransactions.cs</DependentUpon>
